# kickstarter_success_prediction

./: .gitignore  Makefile  README.md  app.py  main.py  pyproject.toml
notebooks/: 01_kickstarter_crispdm.ipynb  02_data_exp.ipynb
results/: kickstarter_benchmark.csv
src/: __init__.py  _metrics.py  data.py  models.py  plots.py
src/adapters/: __init__.py
src/adapters/joblib/: __init__.py  model_store.py
src/adapters/keras/: __init__.py  pmc.py
src/adapters/sklearn/: __init__.py  classifiers.py  clusterers.py  datasets.py  feature_selectors.py  pipelines.py  regressors.py  scalers.py  splitters.py  text_encoders.py
src/domain/: __init__.py  dataset.py  metrics.py
src/neural/: __init__.py  activations.py  neuron.py  training.py
src/ports/: __init__.py  classifier.py  clusterer.py  dataset_loader.py  feature_selector.py  model_store.py  regressor.py  scaler.py  splitter.py  text_encoder.py
src/services/: __init__.py  benchmark.py  bootstrap.py  cross_validation.py  experiment.py  metier.py  prediction_api.py
src/tp_data/: audit.py  cleaning.py  correlations.py  encoding.py  features.py  outliers.py  pipeline.py
src/tp_ia/data/: __init__.py  dataset.py  loader.py
src/tp_ia/training/: __init__.py  experiment.py  models.py
src/tp_ia_2_j3/: phase_a_regression.py  phase_b_clustering.py  phase_c_spam.py  phase_d_sonar.py  phase_e_fight.py
src/tp_ia_2_j4/: phase_1_split.py  phase_2_bootstrap.py  phase_3_crossval.py  phase_4_metier.py  phase_5_api.py
src/tp_ia_2_j4/neural/: neuron.py  pmc_keras.py  training_loop.py
