[project]
name = "mltoolbox"
version = "0.1.0"
description = "ML/DL toolbox with hexagonal architecture — sklearn hidden behind ports"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "uvicorn[standard]>=0.49.0",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
api = ["flask>=3.0.0"]
serial = ["joblib>=1.4.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"mltoolbox" = "src"}
packages = [
    "mltoolbox",
    "mltoolbox.domain",
    "mltoolbox.ports",
    "mltoolbox.adapters",
    "mltoolbox.adapters.sklearn",
    "mltoolbox.adapters.keras",
    "mltoolbox.adapters.joblib",
    "mltoolbox.services",
    "mltoolbox.data",
    "mltoolbox.neural",
]

[dependency-groups]
dev = [
    "setuptools>=68",
    "ruff>=0.15.16",
    "httpx2>=2.4.0",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
