[project]
name = "mltoolbox"
version = "0.1.0"
description = "ML/DL toolbox with hexagonal architecture — sklearn hidden behind ports"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.40.0",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"mltoolbox" = "src"}
packages = [
    "mltoolbox",
    "mltoolbox.domain",
    "mltoolbox.ports",
    "mltoolbox.adapters",
    "mltoolbox.adapters.sklearn",
    "mltoolbox.services",
    "mltoolbox.data",
]

[dependency-groups]
dev = [
    "setuptools>=68",
    "ruff>=0.15.16",
    "httpx2>=2.4.0",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
