[project]
name = "kickstarter-predictor"
version = "0.1.0"
description = "Predict whether a Kickstarter campaign will succeed"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.40.0",
    "xgboost>=3.2.0",
]

# Plain scripts, not an installable package.
[tool.uv]
package = false

[dependency-groups]
dev = ["ruff>=0.15.16"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
